--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -807,7 +807,7 @@
   icon: ""
 "1122202":
   name: "Limit"
-  description: "Increase S1,S2 and S3 damage by 15% per stack, neither a buff nor debuff"
+  description: "Multiply S1,S2 and S3 damage by 1.15x per stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
 "1122205":
