--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -247,6 +247,10 @@ Max 3 times in 1 turn"
 1198102: "[base skill] Apply {{ 1 | status_description }} to highest Atk ally for 2 next attack(s) /100% <br>\
 [If enough VP] Apply {{ 1 | status_description }} to 2nd highest Atk ally for 2 next attack(s) /100% (doesn't gain VP for 2nd activation)"
 
+# Ryusei S3 
+1198103: "[base skill] Apply {{ 274 | status_description } to all allies for 2 next attack(s) /100% <br>\
+[base skill] Apply {{ 275 | status_description } to all allies for 3 next attack(s) /100%"
+
 # Sadayoshi variant passive
 8081201: ""
 8081202: "[When buffed] Heal all allies except self by 5% of own atk /100%."
