--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -20,7 +20,7 @@
   icon: "status_attention"
 "5":
   name: "Provocation"
-  description: "Enemies will be more likely to target you until the end of turn"
+  description: "Enemies will be more likely to target you"
   isGoodStatus: 1
   icon: "status_provocation"
 "6":
