--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -82,14 +82,14 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169103: ""
 8169104: ""
 
-# Ganran S2
+# Ganran S1,S2,Passive
 1199101: "[base skill] Deal 60% of damage to target enemy /100% <br>\
 [base skill] Gain 2 stack of {{ 1199101 | status_description }} /100%"
 1199102: "[base skill] Apply  {{ 5 | status_description }} to self for 2 next attack /100% <br>\
 [base skill] Apply {{ 2 | status_description }} to self for 2 next attack(s) /100%"
 8199101: "[When appearing] Gain 1 stack of {{ 1199101 | status_description }} /100%"
-8199102: "[When taking damage] Gain 1 stack of {{ 1199101 | status_description }} /100%"
-8199103: "[Action end] lose 1 stack of {{ 1199101 | status_description }} /100%"
+8199103: "[When taking damage] Gain 1 stack of {{ 1199101 | status_description }} /100%"
+8199104: "[Action end] lose 1 stack of {{ 1199101 | status_description }} /100%"
 
 # Giansar S3, S3+
 1124102: "[base skill] Apply {{ 123 | status_description }} to target enemy for 1 turn/100%<br>\
