--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -827,6 +827,6 @@
   icon: "status_system_atkup"
 "3199101":
   name: "Atk+"
-  description: "Increase Atk by {{ effects.MultipleAttack.parameter.value | minus: 100 }} ,removed after turn end, neither buff nor debuff%"
+  description: "Increase Atk by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %,removed after turn end, neither buff nor debuff%"
   isGoodStatus: 2
   icon: "status_system_atkup"
