--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -70,9 +70,8 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8008201: "[when appearing] Apply {{ 87 | status_description }} to self /100%"
 
 # Gaius S1 bloom passive
-8115101: "[base skill] Atk+20% when not having debuff /100%"
-
-8115102: "[base skill] Every 1 buff on self also grants 25% debuff resistance (up to 100%) /100%"
+1115105: "[base skill] Deal 80% of damage to target enemy /100%<br>\
+[base skill] Atk+20% when not having debuff /100%"
 
 # Galvo S2, S3, S3+, passive
 1169102: "[base skill] Heal self for 80% of own ATK value /100%<br>\
