--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -650,6 +650,11 @@
   description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
   isGoodStatus: 2
   icon: ""
+"224":
+  name: "Cheer"
+  description: "Atk +10%, doesn't stack, only the highest effect applies, neither a buff nor debuff"
+  isGoodStatus: 2
+  icon: "b_skill_special"
 "238":
   name: "Stubborn"
   description: "Special status for Obsidius' skills, doesn't count as buff or debuff."
