Update debuff immune
[ci skip]

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -290,7 +290,7 @@
   icon: "status_mosaic" 
 "59":
   name: "Debuff Resistance"
-  description: "Reduce the chance of debuff being inflicted"
+  description: "Reduce the chance of debuff being inflicted by {{ effects.RegistDebuff.parameter.value | abs }} %"
   isGoodStatus: 1
   icon: "status_immunity" 
 "60":
