--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -287,7 +287,7 @@
   name: "View Cost Increase"
   description: "Increase view cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
   isGoodStatus: 0
-  icon: "status_mosaic" 
+  icon: "status_useless" 
 "59":
   name: "Debuff Resistance"
   description: "Reduce the chance of debuff being inflicted by {{ effects.RegistDebuff.parameter.value | abs }} %"
