--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -82,7 +82,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169103: ""
 8169104: ""
 
-# Ganran S1,S2,Passive
+# Ganran S1,S2,Passive, SK active
 1199101: "[base skill] Deal 60% of damage to target enemy /100% <br>\
 [base skill] Gain 2 stack of {{ 1199101 | status_description }} /100%"
 1199102: "[base skill] Apply  {{ 'status_provocation' | status_manual: 'Metered Provocation', 'Enemies will be more likely to target you. Count -1 when damage is taken, carries over turns.' }} to self for 2 next attack /100% <br>\
@@ -96,6 +96,15 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8199101: "[When appearing] Gain 1 stack of {{ 1199101 | status_description }} /100%"
 8199103: "[When taking damage] Gain 1 stack of {{ 1199101 | status_description }} /100%"
 8199104: "[Action end] lose 1 stack of {{ 1199101 | status_description }} /100%"
+2199101: "[base skill] Deal 100% of damage to target enemy /100% <br>\
+[base skill] Apply  {{ 'status_provocation' | status_manual: 'Metered Provocation', 'Enemies will be more likely to target you. Count -1 when damage is taken, carries over turns.' }} to self for 1 next attack /100% <br>\
+[base skill] Apply {{ 2 | status_description }} to self for 1 next attack(s) /100%"
+2199102: "[base skill] Deal 100% of damage to target enemy /100% <br>\
+[base skill] Apply  {{ 'status_provocation' | status_manual: 'Metered Provocation', 'Enemies will be more likely to target you. Count -1 when damage is taken, carries over turns.' }} to self for 1 next attack /100% <br>\
+[base skill] Apply {{ 2 | status_description }} to self for 1 next attack(s) /100%"
+2199103: "[base skill] Deal 100% of damage to target enemy /100% <br>\
+[base skill] Apply  {{ 'status_provocation' | status_manual: 'Metered Provocation', 'Enemies will be more likely to target you. Count -1 when damage is taken, carries over turns.' }} to self for 1 next attack /100% <br>\
+[base skill] Apply {{ 2 | status_description }} to self for 1 next attack(s) /100%"
 
 # Giansar S3, S3+
 1124102: "[base skill] Apply {{ 123 | status_description }} to target enemy for 1 turn/100%<br>\
