--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -5,8 +5,8 @@
 
 1001105: "[base skill] Deal 70% of damage to target enemy /100%<br> \
 [base skill] Apply {{ 19 | status_description }} to target enemy for 2 turns /40%<br> \
-[battle start] Apply {{ 1001101 | status_description }} to self<br> \
-[when Akashi's attack damages an enemy] {{ 1001101 | status_description }} +1"
+<mark>[battle start] Apply {{ 1001101 | status_description }} to self<br> \
+[when Akashi's attack damages an enemy] {{ 1001101 | status_description }} +1</mark>"
 
 8001106: ""
 8001107: "[when invoker's attack causes damage to enemy] Apply {{ 1001101 | status_description }} to self /100%"
