--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -690,6 +690,11 @@
   description: "Gain 1 stack when invoker cause damage to enemy, every stack increase atk by 2.5% (max 20 stack), neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_system_firepower"
+"1010202":
+  name: "Spy Tag"
+  description: "When target with Spy Tag take damage from source that is not the invoker of this skill, the invoker will follow up attack with S1, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: "b_skill_special"
 "1014203":
   name: "Excavation"
   description: "Reduce stack by 1 every time target take damage, when 0 stack, remove excavation and apply def down+ (increase damage received by 1.8x) to target"
