--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -165,6 +165,10 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 Apply {{ 205 | status_description }} to all enemies /100%"
 8018202: ""
 
+# Kyoichi variant Skevo S1
+1010205: "[base skill] (extra_cond: possessing  Hide) Deal 70% of damage and extra 30% of damage when condition in bracket is met /100%<br>\
+<mark>[Always active] Increase damage by 10% against debuffed target /100%</mark>"
+
 # Marfik Skevo S1
 1014205: "[base skill] Deal 60% of damage to target enemy /100%<br>\
 [base skill] Add 3000 views /100%<br>\
