--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -166,7 +166,7 @@ Apply {{ 205 | status_description }} to all enemies /100%"
 8018202: ""
 
 # Kyoichi variant Skevo S1
-1010205: "[base skill] (extra_cond: possessing  Hide) Deal 70% of damage and extra 30% of damage when condition in bracket is met /100%<br>\
+1010205: "[base skill] (extra_cond: possessing {{ 15 | status_description }} ) Deal 70% of damage and extra 30% of damage when condition in bracket is met /100%<br>\
 <mark>[Always active] Increase damage by 10% against debuffed target /100%</mark>"
 
 # Marfik Skevo S1
@@ -313,6 +313,11 @@ Max 3 times in 1 turn"
 
 # Shaft variant passive
 8063201: ""
+
+# Shoen Skevo S1
+1012105: "[base skill] Deal 60% of damage to target enemy /100%<br>\
+[base skill] Apply {{ 11 | status_description }} to target enemy for 1 next attack(s) /50%<br>\
+<mark>[When alive] Reduce view consumption of ally by 4% for each buff they have (max 20%), this effect doesn't stack /100%</mark>"
 
 # Tabit S3 , passive
 1151103: "[base skill] Deal 180% of damage to target enemy /100% <br>\
