--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -685,6 +685,11 @@
   description: "Act as additional HP for the receiver, when taking damage Barrier HP will be reduced first, Barrier strength depends on the receiver's base VP (40% base VP, max 3000)"
   isGoodStatus: 0
   icon: "status_barrier"
+"280":
+  name: "Counter"
+  description: "When taking damage, counter with S1 to damager, this status is removed when taking damage"
+  isGoodStatus: 1
+  icon: "status_counter"
 "1001101":
   name: "Fighting Spirit"
   description: "Gain 1 stack when invoker cause damage to enemy, every stack increase atk by 2.5% (max 20 stack), neither buff nor debuff"
