--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -687,7 +687,7 @@
   icon: "status_barrier"
 "280":
   name: "Counter"
-  description: "When taking damage, counter with S1 to damager, this status is removed when taking damage"
+  description: "When taking damage, counter with S1"
   isGoodStatus: 1
   icon: "status_counter"
 "1001101":
