--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -806,7 +806,7 @@
   isGoodStatus: 0
   icon: "status_debuff_special"
 "1160204":
-  name: "Furious Attack"
+  name: "Onslaught"
   description: "[When enemy(s) has Bullet Mark at the end of the turn] deals damage to enemy(s) with Bullet Mark equal to 30%+Bullet Mark*10% Atk, remove all Bullet Mark, doesn't gain view or combo from this action"
   isGoodStatus: 0
   icon: "b_skill_special"
