--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -468,6 +468,11 @@
   description: "Increase ATK by 1.3x at certain probability, proportional to the speed difference between self and target enemy. The chance is doubled if possessing SPD UP buff"
   isGoodStatus: 2
   icon: ""
+"117":
+  name: "Critical"
+  description: "Increase ATK by 1.3x at certain probability, chance increase by 20% for each number of debuff the target has"
+  isGoodStatus: 2
+  icon: ""
 "118":
   name: "Critical"
   description: "When speed is greater than the opponent, there is a chance that damage is multiplied by 1.3"
