--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -790,6 +790,11 @@
   description: "Increase speed by 1 per stack, neither buff nor debuff"
   isGoodStatus: 2
   icon: "status_spdup"
+"1075211":
+  name: "Assault"
+  description: "Increase atk by 5% per buff duration(Max 50%), effect stays after buff is removed, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: "status_buff_special"
 "1123101":
   name: "Cerastium Special"
   description: "When attacked, counter attack with skill 1 (max 2 times per turn)"
