fix oki override

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -245,9 +245,9 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 8075102: ""
 
 # Okitaka Variant S3, Passive
-1075203: "[base skill] Apply {{ 1075211 | status_description }} to self for 2 next attack(s) /100% <br>\
-[base skill] Remove all buff(s) from self /100% <br>\
-[base skill] Deal 100% of damage + (sum duration of removed buffs ^ 2)*4% of damage to all enemies (max +400% damage at 10 buffs duration) /100%"
+1075203: "[base skill] Remove all buff(s) from self /100% <br>\
+[base skill] Deal 100% of damage + (sum duration of removed buffs ^ 2)*4% of damage to all enemies (max +400% damage at 10 buffs duration) /100% <br>\
+[base skill] Apply {{ 1075211 | status_description }} to self for 2 next attack(s) /100%"
 8075201: ""
 8075202: ""
 8075204: ""
