--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -792,7 +792,7 @@
   icon: "status_spdup"
 "1075211":
   name: "Assault"
-  description: "Increase atk by 5% per buff duration removed(Max 50%), neither buff nor debuff"
+  description: "Increase atk by 5% per buff duration removed(Max 50%)"
   isGoodStatus: 2
   icon: "status_buff_special"
 "1123101":
