--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -246,7 +246,8 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 
 # Okitaka Variant S3, Passive
 1075203: "[base skill] Remove all buff(s) from self /100% <br>\
-[base skill] Deal 100% of damage + (sum duration of removed buffs ^ 2)*4% of damage to all enemies (max +400% damage at 10 buffs duration) /100% <br>\
+[base skill] Deal 100% of damage + extra damage based on duration of removed buffs <br>\
+extra damage has maximum of 10 tier as follows from 1-10 buffs duration (4% 16% 32% 64% 100% 144% 196% 256% 324% 400%) /100%<br>\
 [base skill] Apply {{ 1075211 | status_description }} to self for 2 next attack(s) /100%"
 8075201: ""
 8075202: ""
