--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -855,6 +855,11 @@
   description: "Reduce speed by 10 per stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"1207105":
+  name: "Bygul Special"
+  description: "Cap damage taken to maximum 99% of current HP"
+  isGoodStatus: 2
+  icon: "status_buff_special"
 "3198101":
   name: "Overall Atk+"
   description: "After using S3, increase all allies Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} % for 2 turns, doesn't stack with same effect buff"
