Bygul&Shidemasu override

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -36,6 +36,11 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Bygul S2
+1207102: "[base skill] Deal 110% of damage to target enemy /100%<br>\
+[base skill] Apply {{ 12 | status_description }} to target enemy for 1 next attack(s) /100%<br>\
+[base skill] Apply {{ 275 | status_description }} to self for 3 next attack(s) /100%"
+
 # Cerastium S1
 1123101: "[base skill] Deal 60% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 11 | status_description }} target enemy for 1 next attack(s) /40%"
@@ -335,6 +340,9 @@ Max 3 times in 1 turn"
 
 # Shaft variant passive
 8063201: ""
+
+# Shidemasu passive
+8206101: "[When an ally except self has <50% HP] Apply {{ 5 | status_description }} to self for 1 turn /100%"
 
 # Shoen Skevo S1
 1012105: "[base skill] Deal 60% of damage to target enemy /100%<br>\
