--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -855,6 +855,11 @@
   description: "Reduce speed by 10 per stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"1207140":
+  name: "Bygul Special2"
+  description: "Increase HP recovery of recovery skill used by invoker by {{ effects.HealMultipleAttack.parameter.value | minus: 100 }} %"
+  isGoodStatus: 2
+  icon: "status_bless"
 "1207105":
   name: "Bygul Special"
   description: "Cap damage taken to maximum 99% of current HP"
