Bygul sk override

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -36,10 +36,23 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
-# Bygul S2
+# Bygul S2, SK
 1207102: "[base skill] Deal 110% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 12 | status_description }} to target enemy for 1 next attack(s) /100%<br>\
 [base skill] Apply {{ 275 | status_description }} to self for 3 next attack(s) /100%"
+3207101: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+3207102: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+3207103: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+3207104: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+3207105: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+3207106: "[when appearing] Apply {{ 156 | status_description }} to self /100%<br>\
+[when an ally is damaged] Apply {{ 1207140 | status_description }} to self, removed when current turn ends /100%"
+8207104: "[in auto mode] when an ally has <50% hp, prioritize S2 /100%"
 
 # Cerastium S1
 1123101: "[base skill] Deal 60% of damage to target enemy /100%<br>\
