--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -867,7 +867,7 @@
   icon: "status_buff_special"
 "3198101":
   name: "Overall Atk+"
-  description: "After using S3, increase all allies Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} % for 2 turns, doesn't stack with same effect buff"
+  description: "Increase all allies Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} %, doesn't stack with same effect buff"
   isGoodStatus: 2
   icon: "status_atkup"
 "3198102":
